# template-esp32

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  entrypoint.sh  esp32-template.code-workspace  sdkconfig.defaults
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yml  docker-build.yml  release-detect.yml
esp_rfc2217_server/: __init__.py
projects/project1/: CMakeLists.txt  README.md
projects/project2/: CMakeLists.txt  README.md
server_certs/: README.md  github_cert.pem
src/app/NDEF/: CMakeLists.txt  ntag_reader.c  ntag_reader.h  pn532.c  pn532.h
src/app/buzzer/: CMakeLists.txt  buzzer.c  status_buzzer.c
src/app/buzzer/include/: buzzer.h  status_buzzer.h
src/app/database/: CMakeLists.txt  firebase_http_client.c  firebase_utils.c  kiosk_firebase.c
src/app/database/include/: firebase_http_client.h  firebase_utils.h  kiosk_firebase.h
src/app/device_drivers/bq25798/: CMakeLists.txt  bq25798.c
src/app/device_drivers/cypd3177/: CMakeLists.txt  cypd3177_i2c.c  cypd3177_intr.c
src/app/device_drivers/keypad/: CMakeLists.txt  keypad.c
src/app/device_drivers/pcf8574n/: CMakeLists.txt  pcf8574n_i2c.c
src/app/display/: CMakeLists.txt  display_config.c  display_utils.c  idf_component.yml  ui_screens.c  ui_styles.c
src/app/display/image_files/: admin_icon.c  arrow_icon.c  check_icon.c  database_icon.c  error_icon.c  gear_icon.c  id_card_icon.c  keypad_icon.c  software_icon.c  ucf_icon.c  wifi_icon.c  write_id_icon.c
src/app/display/include/: display_config.h  display_utils.h  ui_assets.h  ui_screens.h  ui_styles.h
src/app/i2c/: CMakeLists.txt  i2c_config.c
src/app/i2c/include/: i2c_config.h
src/app/main/: CMakeLists.txt  admin_mode.c  global.c  main.c  main_utils.c  state_enum.c
src/app/main/include/: admin_mode.h  global.h  main.h  main_utils.h  state_enum.h
src/app/misc/: CMakeLists.txt  idf_component.yml  pir_sensor.c
src/app/misc/include/: pir_sensor.h
src/app/mqtt_client/: CMakeLists.txt  mqtt.c
src/app/mqtt_client/include/: mqtt.h
src/app/ota_update/: CMakeLists.txt  ota.c
src/app/ota_update/include/: ota.h
src/app/power_mgmt/: CMakeLists.txt  power_mgmt.c
src/app/power_mgmt/include/: power_mgmt.h
src/app/wifi/: CMakeLists.txt  wifi_init.c
tools/config/: requirements.txt
tools/scripts/: start_server.py
(+9 files in other folders)
